Set correct spacing for all modals

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -92,9 +92,9 @@ main {
 .modal-box {
     display: block;
     position: absolute;
-    left: 35%;
-    top: 25%;
-    width: 30%;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     text-align: center;
     border-radius: 15px;
     border: solid 1px black;
@@ -102,16 +102,28 @@ main {
 }
 
 .modal-box > p {
-    margin: 40px 40px 15px;
+    margin: 40px 0 15px;
 }
 
 .modal-box > button {
-    margin: 15px 40px 40px;
+    margin: 15px 0 40px;
 }
 
-#form-modal>form {
+#new-player-form {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
+    margin: 20px
+}
+
+#new-player-form > div {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+#new-player-form > div > * {
+    padding: 5px;
 }
 
 footer {
